sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:11: error: ')' expected but 'else' found.
    } else {
      ^